ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: javatechie.com
      http:
        paths:
          - path: "/order(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: "/payment(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 80
